objects/PartnerJunc__c.object
<CustomObject>
    <description>testing partner junction object</description>
    <fields>
        <fullName>AccountFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>test to see how junction object would work for partners</description>
        <label>AccountFrom</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PartnerJuncs</relationshipLabel>
        <relationshipName>PartnerJuncs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>test to see how junction object could work for partners</description>
        <label>AccountTo</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PartnerJuncs (AccountTo)</relationshipLabel>
        <relationshipName>PartnerJuncs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>test to see how partner junction objection would work</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PartnerJuncs</relationshipLabel>
        <relationshipName>PartnerJuncs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PartnerJunc</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PartnerJuncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>